# unsaferust-benchmark-artifact

./: .dockerignore  .gitignore  DOCKER_GUIDE.md  Dockerfile  README.md  appendix_benchmark_configs.tex  benchmark_configs.md  config.toml  docker-build.sh  docker-compose.yml  master_runtime_stats.json  run_pipeline.py  update-repos.sh
benchmarks/memchr/: Cargo.toml  Cargo.toml.workspace  pipeline_debug.env
benchmarks/rebar/: README.md
benchmarks/ring/: build.rs
experiments_results/benchmark_dynamics/: bench_dyn.tex
perf/: .rust-analyzer.toml  Cargo.toml  Makefile  README.md  analyze_coverage.py
perf/src/: cpu_cycle_counter.rs  heap_tracker.rs  lib.rs  unsafe_counter.rs  unsafe_coverage.rs
pipeline/: aggregator.py
rustc/: .gitignore  .gitmodules
rustc/src/llvm-project/llvm/lib/Transforms/: CMakeLists.txt
rustc/src/llvm-project/llvm/lib/Transforms/CpuCycleCount/: CMakeLists.txt  CpuCycleCount.cpp  ExternalCallTracker.cpp
rustc/src/llvm-project/llvm/lib/Transforms/DebugInfoPreserve/: CMakeLists.txt  DebugInfoPreserver.cpp
rustc/src/llvm-project/llvm/lib/Transforms/DynamicLineCount/: CMakeLists.txt  DynamicLineCount.cpp
rustc/src/llvm-project/llvm/lib/Transforms/HeapTracker/: CMakeLists.txt  HeapTracker.cpp
rustc/src/llvm-project/llvm/lib/Transforms/InstMarker/: CMakeLists.txt  InstMarker.cpp
rustc/src/llvm-project/llvm/lib/Transforms/UnsafeCount/: CMakeLists.txt  UnsafeFunctionTracker.cpp  UnsafeInstCounter.cpp
rustc/src/llvm-project/llvm/lib/Transforms/UnsafeRustDummy/: CMakeLists.txt  UnsafeRustDummy.cpp
unsafe-rust-benchmark/: config.toml
(+42 files in other folders)
