[package]
name = "unsafe-perf"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2"
ctor = "0.3"
fs2 = "0.4"
once_cell = "1.21.3"
dashmap = "6.1.0"
crossbeam-queue = "0.3.12"
lazy_static = "1.4"

# We should consider turning on/off lto conditionally as some crate use lto and
# some does not.
[profile.release]
lto = true

[lib]
crate-type = ["rlib", "staticlib"]

[features]
heap_tracker = []
cpu_cycle_counter = []
unsafe_coverage = []
unsafe_counter = []
